強制執行法 1975.4.11

--- a/司法-民事/強制執行法.md
+++ b/司法-民事/強制執行法.md
@@ -4,13 +4,21 @@
 
 * 3 強制執行事件，由推事、書記官督同執達員辦理之。
 
-* 4 強制執行，依左列執行名義為之。一、確定之終局判決。二、假扣押、假處分、假執行之裁判及其他依民事訴訟法得為強制執行之裁判。三、依民事訴訟法成立之和解或調解。四、依公證法作成之公證書。但以債權人之請求，係以給付金錢或其他代替物或有價證券之一定數量為標的，而於證書上載明應逕受強制執行者為限。五、抵押權人依民法第八百七十三條之規定，為拍賣抵押物之聲請，經法院為許可強制執行之裁定者。六、其他依法律之規定得為強制執行名義者。
+* 4 強制執行，依左列執行名義為之：一、確定之終局判決。二、假扣押、假處分、假執行之裁判，及其他依民事訴訟法得為強制執行之裁判。三、依民事訴訟法成立之和解或調解。四、依公證法規定得為強制執行之公證書。五、抵押權人或質權人，為拍賣抵押物或質物之聲請，經法院為許可強制執行之裁定者。六、其他依法律之規定，得為強制執行名義者。執行名義附有條件、期限或須債權人提供擔保者，於條件成就、期限屆至或供擔保後，始得開始強制執行。依第一項第一款或第三款之執行名義聲請強制執行者，自執行名義成立之日起，其原有請求權之消滅時效期間不滿五年者，延長為五年；如因時效中斷而重行起算者亦同。
 
-* 5 強制執行因債權人之聲請為之，但假扣押、假處分及假執行之裁判，其執行應依職權為之。
+> 釋：一、公證書得強制執行之條件，公證法第十一條已有明文規定，爰將本條第一項第四款修正。現行法第一項第五款項規定抵押權人依民法第八百七十三條為拍賣抵押物之聲請，但未能適用於同法第八百九十三條關於質權人於債權已屆清償期，而未受清償者，得拍賣質物。故增訂質權人亦可為拍賣質物之聲請，以期周全。二、執行名義附有解除條件或終期者，於條件成就或期限屆滿時，失其效力。其附有停止條件或始期者，依民法第九十九條第一項、第一百零二條第一項之規定，於條件成就或期限屆至前，不發生效力，自均無從開始強制執行。應由債權人提供擔保而尚未提供者亦同。爰增訂第二項明定之。三、請求權之消滅時效中斷後，重行起算時，其時效期間，仍應依權利之性質定其長短，不因判決確定或其他事由中斷而變更（參照最高法院四十九年臺上字第一九五六號判例及司法院三十一年院字第二四一五號解釋）。惟法律所定短期消滅時效，其主要目的在避免舉證困難。如經法院判決確定或和解、調解成立者，其實體上權利義務關係，業已確定，已不生舉證問題。為保護債權人之合法權益，自無再適用原短期消滅時效規定之必要。爰規定此種執行名義，其請求權消滅時效期間不滿五年者，延長為五年，以免此種債權人，須不斷請求強制執行之煩，特增訂第三項。至其他執行名義，其實體上權利義務關係，尚待確定。自不宜包括在內。
 
-* 6 債權人聲請強制執行，應依左列規定提出證明文件：一、依第四條第一款聲請者，應提出判決正本並判決確定證明書或各審級之判決正本。二、依第四條第二款聲請者，應提出裁判正本。三、依第四條第三款聲請者，應提出筆錄正本。四、依第四條第四款聲請者，應提出公證書。五、依第四條第五款聲請者，應提出債權抵押權之證明文件及裁定正本。六、依第四條第六款聲請者，應提出得為強制執行名義之證明文件。前項各款證明文件，債權人未經提出者，執行處應調閱卷宗。但受聲請之法院非係原第一審法院時，不在此限。
+* 5 強制執行，依債權人之聲請為之。但假扣押、假處分及假執行之裁判，其執行得依職權為之。強制執行開始後，債務人死亡者，應對其遺產續行強制執行。
 
-* 7 法院於民事裁判得為強制執行時，應將裁判正本移付執行處。
+> 釋：一、強制執行固可因債權人之聲請為之。但刑事訴訟法第四百七十條及第四百七十一條所定之檢察官囑託執行及其他依法得聲請強制執行之機關，在廣義解釋，均為本法第五條之債權人，應納入本法，以資周全，故增訂之。二、強制執行程序，兩造實體上之權義關係，已經確定，與民事訴訟程序之性質不同。其程序開始後，雖債務人死亡，亦無當然停止之必要（民事訴訟法第一百六十八條參照）。爰增訂本條第二項，以資依循。
+
+* 6 債權人聲請強制執行，應依左列規定，提出證明文件：一、依第四條第一項第一款聲請者，應提出判決正本並判決確定證明書或各審級之判決正本。二、依第四條第一項第二款聲請者，應提出裁判正本。三、依第四條第一項第三款聲請者，應提出筆錄正本。四、依第四條第一項第四款聲請者，應提出公證書。五、依第四條第一項第五款聲請者，應提出債權或抵押權或質權之證明文件及裁定正本。六、依第四條第一項第六款聲請者，應提出得為強制執行名義之證明文件。前項證明文件，未經提出者，執行處應調閱卷宗。但受聲請之法院非係原第一審法院時，不在此限。
+
+> 釋：一、第一項第一至第六款每款「第四條」下均加「第一項」三字，因第四條增加二項之故。另第五款增「或質權」。二、增定第二項。原第二項移列為第三項並做文字修正。
+
+* 7 強制執行，向應執行之標的物所在地或應為執行行為地之法院為之；其不在同一法院者，得向其中一法院為之。對於船舶聲請強制執行者，向船舶停泊港之法院為之。受理強制執行事件之法院，須在他法院管轄區內為執行行為時，應囑託該他法院為之。
+
+> 釋：一、本法既將前條但書依職權執行之規定刪除，自無再將裁判正本移付執行處之必要，原文宜予刪除。二、有關執行事件之受理法院，現行法未設規定，爰增訂第一項至第三項，以應實際需要。
 
 * 8 關於強制執行事項及範圍發生疑義時，執行處應調閱卷宗。前項卷宗，如為他法院所需用時，應自作繕本或節本，或囑託他法院移送繕本或節本。
 
@@ -18,7 +26,9 @@
 
 * 10 實施強制執行時，債務人如具確實擔保，經債權人同意者，得延緩執行。
 
-* 11 供強制執行之財產權，其取得、設定、喪失或變更，依法應登記者，為強制執行時，執行法院應通知該管登記機關登記其事由。
+* 11 供強制執行之財產權，其取得、設定、喪失或變更，依法應登記者，為強制執行時，執行法院應即通知該管登記機關登記其事由。前項通知，執行法院得依債權人之聲請，交債權人逕行持送登記機關登記。債務人因繼承、強制執行、徵收或法院之判決，於登記前已取得不動產物權者，執行法院得因債權人之聲請，以債務人費用，通知登記機關登記為債務人所有後而為執行。前項規定，於第五條第二項之遺產續行強制執行準用之。但不影響繼承人拋棄繼承或限定繼承之權利。
+
+> 釋：一、本條第一項照原條文不修正。二、增訂第二項，俾登記得迅速完成。以防債務人於查封後搶先辦理移轉或設定權利之登記。三、為維持登記制度之完整，貫徹民法第七五九條之規定，並避免債務人故不辦理登記，藉以逃避執行，特增訂第三、四項以利執行。
 
 * 12 當事人或利害關係人對於強制執行之命令或對於執行推事、書記官、執達員實施強制執行之方法，強制執行時應遵守之程序或其他侵害利益之情事，得於強制執行程序終結前為聲請或聲明異議。但強制執行不因而停止。前項聲請及聲明異議，由執行法院裁定之。不服前項裁定者，得於五日內提起抗告。
 
@@ -32,7 +42,9 @@
 
 * 17 執行處如發見債權人查報之財產確非債務人所有者，應命債權人另行查報，於強制執行開始後始發見者，應由執行法院撤銷其執行處分。
 
-* 18 有回復原狀之聲請，或提起再審或異議之訴，或對於第四條第五款之裁定提起抗告時，不停止強制執行。但法院因必要情形，或命當事人提出相當確實擔保，而為停止強制執行之裁定者，不在此限。當事人對於前項裁定不得抗告。
+* 18 強制執行程序開始後，除法律另有規定外，不停止執行。有回復原狀之聲請，或提起再審或異議之訴，或對於和解為繼續審判之請求，或提起宣告調解無效之訴、撤銷調解之訴，或對於第四條第一項第五款之裁定提起抗告時，法院因必要情形或依聲請定相當並確實之擔保，得為停止強制執行之裁定。當事人對於前項裁定，不得抗告。
+
+> 釋：為免執行程序長期延宕，有損債權人之權益，故增訂第一項之規定。原條文第一項移列第二項。並於「提起再審或異議之訴」下增列「或對於和解為繼續審判之請求，或提起宣告調解無效之訴、撤銷調解之訴」，以減少實務上之困難。
 
 * 19 強制執行事件有調查之必要時，除命債權人查報外，執行推事得自行或命書記官調查之。
 
@@ -46,7 +58,9 @@
 
 * 24 管收期限，不得逾三個月。有管收新原因發生時，對於債務人仍得再行管收，但以一次為限。
 
-* 25 債務人履行債務之義務，不因管收而免除。
+* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。第二十條至第二十二條及第二十四條關於債務人拘提、管收及應負義務之規定，於左列各款之人，亦適用之：一、債務人為未成年人或禁治產人者，其法定代理人。二、商號之經理人或清算人，其為合夥組織者，其執行業務之合夥人。三、公司之負責人。四、其他法人之負責人。五、債務人死亡者，其遺產管理人或遺囑執行人。
+
+> 釋：一、第一項增列「或依本法得管收之」係配合第二項之增訂。二、目前社會上常有利用債務人法定代理人、經理人、公司董事等之身分，以未成年人，公司商號之名義與他人交易後，即故不清償債務，致債權人之合法權益，不能獲得充分之保障。爰參照破產法第三條之規定，增訂第二項以應實際需要。
 
 * 26 管收條例，另定之。
 
@@ -60,7 +74,9 @@
 
 * 31 因強制執行所得之金額，如有多數債權人參與分配時，執行處應作成分配表，並指定分配期日，於分配期日前三日，以繕本交付債務人及各債權人或並置於法院書記室，任聽閱覽。
 
-* 32 他債權人參與分配者，應於強制執行程序終結前，以書狀聲明之。如執行標的物不經拍賣而在聲明參與分配前，已交付債權人或經執行處收受，視為已由債務人向債權人清償者，他債權人不得參與分配。
+* 32 他債權人參與分配者，應於標的物拍賣或變賣終結前，其不經拍賣或變賣者，應於當次分配表作成前，以書狀聲明之。逾前項期間聲明參與分配者，僅得就前項債權人受償餘額而受清償。如尚應就債務人其他財產執行時，其債權額與前項債權餘額，除有優先權者外，應按其數額平均受償。
+
+> 釋：一、現行法條文所謂「強制執行程序終結」，係指因強制執行所得之金額已交付或分配與各債權人之前，他債權人仍得參與分配，致分配表難於確定。債務人亦易偽造債權參與分配。為保障正當權利人之權益，有限制聲明參與分配時間之必要。按前補訂民事執行辦法第二十五條第一項規定「他債權人參與分配者，應於第一次拍賣期日終竣前聲明之」，限制過嚴。而現行法規定於強制執行程序終結前均得為之，失之過寬。爰修正為他債權人參與分配者，應於標的物拍賣或變賣終結前，其不經拍賣或變賣者，於當次分配表作成前，以書狀聲明之，以謀兼顧。二、執行標的物已交付債權人者，顯已執行終結，不得聲明參與分配，為當然之解釋，無以明文規定之必要。又執行處收受後，應即交付債權人或依法分配，不宜視為已由債務人向債權人清償，以杜紛擾。原條文「如執行標的不經拍賣」以下文字，應予刪除。三、增訂第二項，使逾期聲明參與分配者，得就除額受償。如尚應就債務人其他財產執行時，仍得受分配，以示公平。
 
 * 33 對於已開始實施強制執行之債務人財產，他債權人不得再聲請強制執行，有再聲請強制執行者，視為參與分配之聲明。
 
@@ -74,7 +90,9 @@
 
 * 38 參與分配之債權人，除有優先權者外，應按其債權額數平均分配。
 
-* 39 債權人對於分配表有不同意者，應於分配期日前，向執行法院提出書狀聲明異議。
+* 39 債權人對於分配表金額之計算及分配之次序，有不同意者，應於分配期日前，向執行法院提出書狀，聲明異議。
+
+> 釋：查他債權人得否參與分配，其債權額應否列入分配表，應依第三十二條至第三十六條之規定決定之。本條債權人對於分配表之異議，應以金額之計算及分配之次序有不同意者為限，爰修正之。
 
 * 40 執行法院對於前條之異議認為正當，而到場之他債權人不為反對之陳述者，應即更正分配表而為分配。異議未依前項規定終結者，應就無異議之部分，先為分配。
 
@@ -82,7 +100,9 @@
 
 * 42 強制執行事件，應於開始強制執行後三個月內完結。但遇有特別情形，得報明院長酌予展限，每次展限，不得逾三個月。強制執行事件，依其性質應分期執行者，不適用前項之規定。
 
-* 43 依外國法院確定判決聲請強制執行者，以該判決無民事訴訟法第四百零一條各款情形之一，並經中國法院以判決宣示許可其執行者為限，得為強制執行。
+* 43 依外國法院確定判決聲請強制執行者，以該判決無民事訴訟法第四百零二條各款情形之一，並經中華民國法院以判決宣示許可其執行者為限，得為強制執行。
+
+> 釋：「第四百零一條」改為「第四百零二條」。俾與民事訴訟法修正後之條次符合。
 
 * 44 強制執行程序除本法有規定外，準用民事訴訟法之規定。
 
@@ -98,7 +118,9 @@
 
 * 50 查封動產，以其價格足清償強制執行之債權額及債務人應負擔之費用者為限。
 
-* 51 查封之效力及於查封物之孳息。
+* 51 查封之效力及於查封物之孳息。實施查封後，債務人就查封物所為移轉、設定負擔或其他有礙執行效果之行為，對於債權人不生效力。實施查封後，第三人未經執行法院允許，占有查封物或為其他有礙執行效果之行為者，執行法院得依聲請排除之。
+
+> 釋：一、第一項照原條文不修正。二、查封之效力如何，非但與執行有關，且涉及是否犯罪之問題（刑法第一百卅九條），現行法規定過於簡略，爰增訂第二項。三、第三人未經執行法院允許而占有查封物或為其他有礙執行效果之行為者，屢見不鮮，如須一一取得執行名義始得排除之，曠日持久，影響執行效果至大。爰增訂第三項，以資因應，而宏績效。
 
 * 52 查封時應酌留債務人及其家屬二個月間生活所必需之物。前項期間，執行推事審核債務人家庭狀況，得伸縮之。但不得短於一個月或超過三個月。
 
@@ -136,7 +158,9 @@
 
 * 69 拍賣物買受人就物之瑕疵無擔保請求權。
 
-* 70 執行處因債權人或債務人之聲請或認為必要時，應依職權於拍賣前預定拍賣物之底價。執行處定底價時，應詢問債權人及債務人之意見，但無法通知或屆期不到場者，不在此限。拍定應就應買人所出之最高價，高呼三次後為之。應買人所出之最高價，如低於底價，或雖未定底價而債權人或債務人對於應買人所出之最高價認為不足而為反對之表示時，執行拍賣人應不為拍定，由執行處定期再行拍賣。拍賣物依前項規定，再行拍賣時，應拍歸出價最高之應買人。
+* 70 執行處因債權人或債務人之聲請，或認為必要時，應依職權於拍賣前預定拍賣物之底價，並得酌定保證金額。執行處定底價時，應詢問債權人及債務人之意見。但無法通知或屆期不到場者，不在此限。拍定應就應買人所出之最高價，高呼三次後為之。應買人所出之最高價，如低於底價，或雖未定底價而債權人或債務人對於應買人所出之最高價，認為不足而為反對之表示時，執行拍賣人應不為拍定，由執行處定期再行拍賣。拍賣物依前項規定，再行拍賣時，應拍歸出價最高之應買人。但其最高價不足底價百分之六十，或雖未定底價，而其最高價顯不相當者，執行處應作價交債權人承受；債權人不承受時，執行法院應撤銷查封，將拍賣物返還債務人。
+
+> 釋：本條第五項所定再行拍賣，應買人所出最高價如不足底價百分之六十，或雖未定底價，而其最高價顯不相當者，不應許其拍定。此際自應作交債權人承受，債權人不承受時，即撤銷查封，將拍賣物返還債務人，以維護當事人之權益，爰增設但書之。
 
 * 71 拍賣物無人應買時，執行處應作價交債權人收受；債權人不收受時，應由執行法院撤銷查封，將拍賣物返還債務人。
 
@@ -146,7 +170,9 @@
 
 * 74 拍賣物賣得價金，扣除強制執行之費用及取得執行名義之費用後，應將餘額交付債權人；其餘額超過債權人所應受償之數額時，應將超過額交付債務人。
 
-* 75 不動產之強制執行，以查封、拍賣、強制管理之方法行之。
+* 75 不動產之強制執行，以查封、拍賣、強制管理之方法行之。應拍賣之財產有動產及不動產者，執行法院得合併拍賣之。前項合併拍賣之動產，適用關於不動產拍賣之規定。
+
+> 釋：應拍賣者，如為債務人之營業財產，常包括動產與不動產在內。如分別拍賣，可能減損其價值，影響當事人之利益。爰增訂第二項第三項，以應需要。
 
 * 76 查封不動產，由執行推事命書記官督同執達員，依左列方法行之：一、揭示。二、封閉。三、迫繳契據。前項方法，於必要時得併用之。
 
@@ -178,23 +204,35 @@
 
 * 90 投標人願出之最高價額相同者，以抽籤定其得標人。
 
-* 91 拍賣期日，應買人所出之最高價未達於拍賣最低價額者，執行拍賣人應不為拍定，由執行法院定期再行拍賣。依前項規定再行拍賣時，執行法院應酌減拍賣最低價額。酌減數額不得逾百分之二十。
+* 91 拍賣之不動產無人應買，或應買人所出之最高價未達拍賣最低價額，而債權人願承受者，執行法院應依該次拍賣所定之最低價額，將不動產交債權人承受，並發給權利移轉證書。其不願承受或依法不得承受者，由執行法院定期再行拍賣。依前項規定再行拍賣時，執行法院應酌減拍賣最低價額；酌減數額不得逾百分之二十。
 
-* 92 再行拍賣期日，應買人所出之最高價，未達於減定之拍賣最低價額者，應準用前條之規定，再行拍賣，其酌減數額，不得逾減定之拍賣最低價額百分之二十。
+> 釋：為求執行程序得以迅速終結及兼顧雙方之利益特簡化執行程序，使供拍賣之不動產，於無人應買或應買人所出之最高價未達拍賣最低價額時，許債權人依該次拍賣所定之最低價額承受。債權人不願承受或依法不得承受時，始行減價拍賣。爰修正第一項。
+
+* 92 再行拍賣期日，無人應買或應買人所出之最高價，未達於減定之拍賣最低價額者，準用前條之規定；如再行拍賣，其酌減數額，不得逾減定之拍賣最低價額百分之二十。
+
+> 釋：本條「應準用前條．．．．」中之「應」字係贅文予以刪除。
 
 * 93 前二條再行拍賣之期日，距公告之日，不得少於十日，多於三十日。
 
-* 94 經二次減價拍賣而未拍定之不動產，執行法院得依第二次減定之拍賣最低價額，將不動產交債權人承受，並發給權利移轉證書。
+* 94 債權人有二人以上願承受者，以抽籤定之。承受不動產之債權人，其應繳之價金超過其應受分配額者，執行法院應限期命其補繳差額後，發給權利移轉證書；逾期不繳者，強制執行。
 
-* 95 前條未拍定之不動產，債權人不願承受時，應命強制管理。在管理中，依債權人或債務人聲請，得再減價或另估價拍賣。
+> 釋：一、明定不動產再行拍賣之程序，對應買人所出之最高價額，仍未達於拍賣最低額，而債權人依法得承受並願承受者，執行法院應依該次拍賣所定之最低價額，將不動產交債權人承受，並發給權利移轉證書，拍賣及再行拍賣之不動產，無人應買者，亦同，以便遵循，故修訂第一項。二、債權人有二人以上均願承受者，現行法未設規定，易滋紛擾，特明定以抽籤定之，以示公平，故增訂第二項。三、債權人承受不動產，其應繳之價金超過其應受分配額者，應如何處理，現行法未設規定。遇有此種情形，執行時無法律依據。特明定，由執行法院應限期命其補繳，逾期不繳者，強制執行之。以應實際需要，故增訂第三項。
 
-* 96 供拍賣之不動產，其一部分之賣得價金，已足清償強制執行之債權額及債務人應負擔之費用時，其他部分應停止拍賣。前項情形債務人得指定其應拍定不動產之部分。
+* 95 經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，應命強制管理；在管理中，得依債權人或債務人聲請，再減價或另估價拍賣。
+
+> 釋：不動產經拍賣或再行拍賣仍無人應買者，現行法規定債權人不願承受時，應命強制管理，延宕執行程序不能終結，應規定再定期再行拍賣，俾使執行程序早日終結。如經二次減價仍未拍定之不動產，債權人仍不願承受或依法不能承受時，再命強制管理。但在管理中依債權人或債務人之聲請，得再減價或另估價拍賣，以昭慎重，而杜流弊，故增訂第一、二項。
+
+* 96 供拍賣之數宗不動產，其中一宗或數宗之賣得價金，已足清償強制執行之債權額及債務人應負擔之費用時，其他部分應停止拍賣。前項情形，債務人得指定其應拍定不動產之部分。但建築物及其基地，不得指定單獨拍定。
+
+> 釋：一、第一項作文字修正。二、第二項增訂但書，規定建築物及基地，不得單獨拍定，以免減損其價值及影響不動產之利用。
 
 * 97 拍賣之不動產，買受人繳足價金後，執行法院應發給權利移轉證書及其他書據。
 
 * 98 拍賣之不動產，買受人自領得執行法院所發給權利移轉證書之日起，取得該不動產所有權；債權人承受債務人之不動產者亦同。
 
-* 99 債務人應交出不動產者，執行人員應點交於債權人、買受人或其代理人。如有拒絕交出或其他情事時，得請警察協助。
+* 99 債務人應交出之不動產，現為債務人占有或於查封後為第三人占有者，執行法院應解除其占有，點交於買受人或承受人；如有拒絕交出或其他情事時，得請警察協助。依前項規定點交後，原占有人復占有該不動產者，執行法院得依聲請再解除其占有後點交之。
+
+> 釋：一、原條文所謂「債權人」係指依法承受該之動產之債權人而言爰修正為「承受人」。又點交於買受人之代理人，與點交與買受人無異。原條文所定之「代理人」，宜予刪除，並作文字上之修正。二、本條所謂「點交」，應以債務人有交付義務為前提。第三人於查封前占有者，依法應受保護。但於查封後始行占有者，則應予以點交。又點交時必須先行解除占有人之占有。特明定現為債務人占有或於查封後為第三人占有者，應解除其占有後點交之，以免爭執。三、增訂第二項，以維持執行之效果，藉免當事人再受訟累。
 
 * 100 房屋內或土地上之動產，除應與不動產同時強制執行外，應取去點交債務人或其代理人家屬或受僱人。無前項之人接受點交時，應將動產暫付保管，向債務人為限期領取之通知；債務人逾限不領取時，得拍賣之而提存其價金，或為其他適當之處置。
 
@@ -224,17 +262,41 @@
 
 * 113 不動產之強制執行，除本章有規定外，準用關於動產執行之規定。
 
-* 114 船舶之強制執行，準用關於不動產執行之規定。前項船舶，以海商法所規定者為限。
+* 114 海商法所定之船舶，其強制執行，除本法另有規定外，準用關於不動產執行之規定；建造中之船舶亦同。對於船舶之強制執行，自運送人或船長發航準備完成時起，以迄航行完成時止，仍得為之。前項強制執行，除海商法第四條第一項但書之規定外，於保全程序之執行名義，不適用之。
 
-* 115 就債務人對於第三人之金錢債權為執行時，執行法院應依職權禁止債務人收取或為其他處分，並禁止第三人向債務人清償。前項情形，執行法院得以命令許債權人收取，或將該債權移轉於債權人。如認為適當時，得命第三人向執行法院支付轉給債權人。
+> 釋：一、原條文第一項第二項合併修正改列為第一項，並增加「除本法另有規定外」一語，以兼顧法律之配合。關於建造中之船舶，得依海商法第三十二條之規定，設定船舶抵押權，並依船舶登記法第五十三條之規定辦理登記。但其執行程序，究應適用動產執行之規定抑或準用不動產執行之規定，現行法未設明文，為應實際需要，故增訂之。二、海商法第四條規定，船舶之扣押、假扣押、自運送人或船長發航準備完成時起，以迄航行完成時止，不得為之。其立法原意旨在保護債權人、債務人以外當事人之權益，以避免國際貿易糾紛。此項規定，就本法言，在執行程序上頗有困難，而有使船舶無法查封情形，惟船舶價值甚鉅，一般所有人於船舶建造中或船舶營運中為融通資金，常有向金融機構借貸鉅款，並設定抵押權，如抵押債權人取得執行名義後，對於發航準備完成之船舶，不能實施查封拍賣，殊難保障擔保物權之效益。對於維護航業之發展與航運資金之靈活融通，影響至鉅。且一九五二年國際海船扣押公約早已規定：船舶雖已發航準備完成，仍得為強制執行之查封，英美二國之法制亦同。本法為保障擔保物權之效益及維護航業之發展與航運資金之靈活融通，特依國際公約及英美立法例，增訂：「對於船舶之強制執行，自運送人或船長發航準備完成時起，以迄航行完成時止，仍得為之」。以避免執行之困難，而保債權人之合法權益，故增訂第二項。
 
-* 116 就債務人基於債權或物權，得請求第三人交付或移轉動產或不動產之權利為執行時，執行法院除以命令禁止債務人處分，並禁止第三人交付或移轉外，如認為適當時，得命第三人將該動產或不動產交與執行法院，依關於動產或不動產執行之規定執行之。
+* 114.1 船舶於查封後，應使其停泊於指定之處所，並通知航政主管機關。但經債權人同意，執行法院認為適當時，得因當事人或利害關係人之聲請，准許其航行。債務人或利害關係人，得以債權額及執行費用額或船舶之價額，提供擔保金額或相當物品，聲請撤銷船舶之查封。依前項規定撤銷船舶之查封時，得就該項擔保續行執行。第一項但書情形，不影響海商法第二十四條第一項第一款之優先受償權。
+
+> 釋：一、本條為新增條文。為兼顧航運之發展及託運人之利益，查封後之船舶，宜設經債權人同意得准許航行及債務人或利害關係人提供擔保，得撤銷查封之制度，以資兼顧債務人之權益。故增訂第一、二、三項。二、為使海商法第二十四條第一項第一款債權人優先受償，不受船舶准許航行之影響，而免執行時之紛爭，爰增訂第四項明定之。
+
+* 114.2 前條准許航行之船舶，在未返回指定之處所停泊者，不得拍賣。但船舶現停泊於其他法院轄區者，得囑託該法院拍賣或為其他執行行為。拍賣船舶之公告，除記載第八十一條第二項第二款至第五款事項外，並應載明船名、船種、總噸位、船舶國籍、船籍港、停泊港及其他事項，揭示於執行法院、船舶所在地及船籍港所在地航政主管機關牌示處。船舶得經應買人、債權人及債務人同意變賣之。並於買受人繳足價金後，由執行法院發給權利移轉證書。
+
+> 釋：一、准許航行之船舶，行蹤不定，不宜逕行拍賣，以免發生點交之困難。又船舶經查封後，不在當時指定之處所停泊者，為便於執行，宜許原執行法院囑託船舶現停泊地之法院拍賣或為其他執行行為。爰增訂第一項，以利實務。二、第二項明定拍賣船舶之公告，除記載第八十一條第二款至第五款事項外，並應載明船名、船種、總噸位、船舶國籍、船籍港、碇泊港及其他事項，揭示於執行法院、船舶所在地及船籍港所在地航政主管機關牌示處。三、為使船舶能迅速變售，以減少損失及不必要之費用起見，明定買受人繳足價金後，執行法院即發給權利移轉證書，俾使買受人即可利用該買受之船舶，故增訂第三項。
+
+* 114.3 外國船舶經中華民國法院拍賣者，關於船舶之優先權及抵押權，依船籍國法。當事人對優先權與抵押權之存在所擔保之債權額或優先次序有爭議者，應由主張有優先權或抵押權之人，訴請執行法院裁判；在裁判確定前，其應受償之金額，應予提存。
+
+> 釋：一、外國船舶停泊於我國港口或航行於我國領域內者，依屬地主義之原則，為我法權所及，我國法院得予強制執行。二、但關於船舶之優先權及抵押權，參照涉外民事法律適用法第十條第四項之規定及國際私法上相互承認其效力，准其享有優先受償之權利。惟優先權係不經登記之權力，而外國官署所為抵押權登記，屬外國政之公法行為，執行債權人對其存在，及其所擔保之債權額或優先次序有爭議者，就本法第四十三條及民事訴訟法第四百零二條之意旨觀之，該優先權與抵押權之效力，並非當然及於我國領域，故增訂本條，以杜糾紛。
+
+* 114.4 民用航空法所定航空器之強制執行，除本法另有規定外，準用關於船舶執行之規定。查封之航空器，得交由當地民用航空主管機關保管之。航空器第一次拍賣期日，距公告之日，不得少於一個月。拍賣航空器之公告，除記載第八十一條第二項第二款至第五款事項外，並應載明航空器所在地、國籍、標誌、登記號碼、型式及其他事項。前項公告，執行法院應通知民用航空主管機關登記之債權人。但無法通知者，不在此限。
+
+> 釋：一、查人類使用航空器，因航空事業之發展而日漸增加，對其如何強制執行，現行法並無明文，自有增訂之必要。按航空器在實體法上，雖有動產性。但其價值甚高，且民用航空法第十八條規定航空器得為抵押權之標的，同法第十九條規定其所有權之移轉，抵押權之設定及租賃，非經登記，不得對抗第三人，強制執行法上，宜視同不動產，比照對於船舶執行之規定處理。至所謂航空器者，其範圍如何從民用航空法之規定。二、明定查封航空器之保管機關，以利保管，故增訂第二項。三、按一九四八年國際航空器權利公約第七條規定：「航空器之拍賣時間，應在一個月前公告之，應通知經登記之債權人」。為配合此項國際公約之規定，故增訂第三項。四、航空器之性能與船舶有別，拍賣公告應記載事項，應另作規定，以利實用，故增訂第四項。五、第五項增訂理由同第三項。
+
+* 115 就債務人對於第三人之金錢債權為執行時，執行法院應依職權禁止債務人收取或為其他處分，並禁止第三人向債務人清償。前項情形，執行法院得以命令許債權人收取，或將該債權移轉於債權人。如認為適當時，得命第三人向執行法院支付轉給債權人。金錢債權因附條件或期限，致難依前項之規定辦理者，執行法院得依聲請，準用對於動產執行之規定拍賣或變賣之。
+
+> 釋：金錢債權因附條件或期限，致執行法院難依收取、移轉或支付轉給命令為執行者，如何處理，現行法並無明文。爰增訂第三項，以應實際需要。
+
+* 116 就債務人基於債權或物權，得請求第三人交付或移轉動產或不動產之權利為執行時，執行法院除以命令禁止債務人處分，並禁止第三人交付或移轉外，如認為適當時，得命第三人將該動產或不動產交與執行法院，依關於動產或不動產執行之規定執行之。基於確定判決，或依民事訴訟法成立之和解、調解，第三人應移轉或設定不動產物權於債務人者，執行法院得因債權人之聲請，以債務人之費用，通知登記機關登記為債務人所有後執行之。
+
+> 釋：就債務人基於確定判決或訴訟上之和解、調解，得請求第三人移轉或設定不動產物權為執行時，債務人如不聲請登記機關辦理物權登記，現行法僅扣押及拍賣其權利，不得拍賣該不動產之物權，致拍賣時無人願意應買，或僅能以低價拍賣，對債權人及債務人之利益損害至鉅，爰增訂第二項，以應需要。
 
 * 117 對於前二章及前二條所定以外之財產權執行時，準用前二條之規定，執行法院並得酌量情形，命令讓與或管理，而以讓與價金或管理之收益清償債權人。
 
 * 118 前三條之命令，應送達於債務人，有第三人者，並應送達於第三人，已為送達後，應通知債權人。
 
-* 119 第三人不承認債務人之債權或其他財產權之存在，或於數額有爭議時，應於接受法院命令後十日內，提出書狀，向執行法院聲明。
+* 119 第三人不承認債務人之債權或其他財產權之存在，或於數額有爭議時，應於接受法院命令後十日內，提出書狀，向執行法院聲明異議。第三人不於前項期間內聲明異議，亦未依執行法院命令，將金錢支付債權人，或將金錢、動產或不動產支付或交付執行法院時，執行法院得因債權人之聲請，逕向該第三人為強制執行。對於前項執行，第三人得以第一項規定之事由，提起異議之訴。第十八條第二項及第三項之規定，於前項訴訟準用之。
+
+> 釋：一、現行法第一百十五條第二項規定命第三人向執行法院支付金錢，而不支付，又不依規定聲明異議者，仍須債權人對於該第三人取得執行名義，始得對該第三人為強制執行（見最高法院廿二年抗字第一一六七號判例）。非特影響執行效果，且足助長該第三人輕視執行命令之心理。爰增訂第二項，以應需要。二、新增第三項，其目的在保護第三人之權益。三、第三人不依規定異議者，雖可對之執行，惟為保障第三人之利益，特許第三人訴請確認其債務不存在，並得停止執行。爰增訂第四項。
 
 * 120 債權人對於前條第三人之聲明，認為不實時，得向管轄法院提起訴訟，並通知債務人。
 
@@ -244,7 +306,9 @@
 
 * 123 執行名義，係命債務人交付一定之動產而不交付者，執行法院得將該動產取交債權人。
 
-* 124 執行名義係命債務人交出不動產而不交出者，執行法院得解除債務人之占有，使歸債權人占有。
+* 124 執行名義係命債務人交出不動產而不交出者，執行法院得解除債務人之占有，使歸債權人占有。如債務人於解除占有後，復占有該不動產者，執行法院得依聲請續為執行。執行名義係命債務人交出船舶或在建造中之船舶，而不交出者，準用前項之規定。
+
+> 釋：一、第一項增訂後段，以維執行之效果，並防止債務人取巧，俾免債權人再受訟累。二、為配合本草案第一百十四條第二項之規定，特增訂第二項，以應需要。
 
 * 125 關於動產、不動產執行之規定，於前二條情形準用之。
 
@@ -254,13 +318,19 @@
 
 * 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務履行之期間及逾期不履行應賠償損害之數額，向債務人宣示或處或併處債務人以一千元以下之過怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
 
-* 129 執行名義係命債務人容忍他人之行為或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提管收之，或處一千元以下之過怠金。處過怠金時，並得因債權人聲請，命債務人提出相當之擔保。前項管收，準用第二十四條至第二十六條之規定。
+* 129 執行名義係命債務人容忍他人之行為，或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提、管收之，或處以一千元以下之過怠金；必要時，並得因債權人之聲請，以債務人之費用，除去其行為之結果。前項不行為債務，執行完畢後，債務人復行違反時，執行法院得依聲請續為執行。第一項管收，準用第二十四條至第二十六條之規定。
+
+> 釋：一、第一項末段處過怠金時，並得因債權人聲請，命債務人提出相當之擔保，係屬贅文，予以刪除。二、為求徹底達成執行之目的，特於本條第一項之末增設除去行為結果之規定。
 
 * 130 為執行名義之判決，係命債務人為一定之意思表示而不表示者，視為自判決確定時，已為其意思表示。但意思表示有待於對待給付者，自法院就已為對待給付或提出相當擔保，給予證明書時，視為已為其意思表示。
 
-* 131 關於繼承財產或共有物分割之執行，執行法院應將財產總額核准分配，並給與分得部分之權利移轉證書。前項分配，於必要時，得命鑑定人鑑定之。
+* 131 關於繼承財產或共有物分割之裁判，執行法院得將各繼承人或共有人分得部分點交之，其應以金錢補償者，並得對於補償義務人之財產執行。執行名義係變賣繼承財產或共有物，以價金分配於各繼承人或各共有人者，執行法院得予以拍賣，並分配其價金；其拍賣程序，準用關於動產或不動產之規定。
 
-* 132 假扣押或假處分之執行，應於假扣押或假處分之裁定送達後，立即開始與送達同時為之。
+> 釋：一、為便民及避免當事人另行訴訟起見，特配合民法第八二四條第二項第三項規定，將本條第一項第二項修正，以求明確。二、共有物分割之判決，雖屬形成判決，但此項判決，尚具有交付他共有人分得部分之性質，自可據以點交，爰於第一項併予規定。三、執行名義為變賣繼承財產或共有物，以價金分配於各繼承人或各共有人時，其變賣方法如何，應予明定，爰修正第二項，以應實際需要。
+
+* 132 假扣押或假處分之執行，應於假扣押或假處分之裁定送達同時或送達前為之。前項送達前之執行，於執行後不能送達，債權人又未聲請公示送達者，應撤銷其執行；其公示送達之聲請被駁回確定者亦同。
+
+> 釋：一、債務人送達處所不明，或於外國為送達，或因其他情事不能送達者，原應依民事訴訟法之規定公示送達或為囑託送達。惟債務人常利用此機會隱匿或處分其財產。爰修正原條文為第一項，並新增第二項，以應實際需要。二、執行後不能送達者，明定處理之方法，以資遵循。
 
 * 133 因執行假扣押收取之金錢及依分配程序應分配於假扣押債權人之金額，應提存之。
 
@@ -276,7 +346,9 @@
 
 * 139 假處分裁定，係禁止債務人設定移轉、或變更不動產上之權利者，法院應將該裁定揭示。
 
-* 140 假處分之執行，除前三條規定外，準用關於假扣押執行之規定。
+* 140 假處分之執行，除前三條規定外，準用關於假扣押及行為、不行為請求權執行之規定。
+
+> 釋：依民事訴訟法第五百三十五條第二項規定，假處分得命令或禁止債務人為一定行為，現行法就此未定執行方法，故予補充。俾資依循。
 
 * 141 本法施行前，已開始強制執行之事件，視其進行程度，依本法所定之程序終結之，其已進行之部分，不失其效力。
 
