--- a/行政-財政及金融/銀行法.md
+++ b/行政-財政及金融/銀行法.md
@@ -1,238 +1,280 @@
-* 1 本法稱銀行，謂依公司法及本法組織登記，並依本法經營銀行業務之機構。
+* 1 為健全銀行業務經營，適應產業發展，並使銀行信用配合國家金融政策，特制定本法。
 
-* 2 本法稱銀行業務，為左列各款：一、收受各種存款。二、票據承兌。三、辦理各種放款或票據貼現。四、國內匯兌。五、特許經營之國外匯兌。六、代理收付款項。七、倉庫及保管業務。八、買賣有價證券及投資。九、代募或承募公債、公司債及公司股份。十、特許買賣生金銀及外國貨幣。十一、受託經管財產。前項第一款至第六款為銀行主要業務，第七款至十一款為銀行附屬業務。
+* 2 本法稱銀行，謂依本法組織登記，經營銀行業務之機構。
 
-* 3 本法稱活期存款，謂除定期存款外，無時期上限制，存款人得隨時提取之存款。
+* 3 銀行經營之業務如左：一、收受支票存款。二、收受其他各種存款。三、受託經理信託資金。四、發行金融債券。五、辦理放款。六、辦理票據貼現。七、投資有價證券。八、直接投資生產事業。九、投資住宅建築及企業建築。十、辦理國內外匯兌。十一、辦理商業匯票承兌。十二、簽發信用狀。十三、辦理國內外保證業務。十四、代理收付款項。十五、承銷及自營買賣或代客買賣有價證券。十六、辦理債券發行之經理及顧問事項。十七、擔任股票及債券發行簽證人。十八、受託經理各種財產。十九、辦理證券投資信託有關業務。二十、買賣金銀及外國貨幣。二十一、辦理與前列各款業務有關之倉庫、保管及代理服務業務。
 
-* 4 本法稱定期存款，謂有一定時期之限制，存款人於到期時提取或一定時期前通知銀行方能提取之存款。
+* 4 各銀行得經營之業務項目，由中央主管機關按其類別，就本法所定之範圍內分別核定，並於營業執照上載明之。但其有關金銀、外幣之買賣，及涉及外匯各款業務之經營，須經中央銀行之特許。
 
-* 5 本法稱普通存款，謂除儲蓄存款及信託款項以外之一般活期及定期存款。
+* 5 銀行依本法辦理授信，其期限在一年以內者，為短期信用；超過一年而在七年以內者，為中期信用；超過七年者，為長期信用。
 
-* 6 本法稱儲蓄存款，謂以收取利息為目的，憑存單或存摺儲存銀行之活期或定期之定額存款。
+* 6 本法稱支票存款，謂依約定，憑存款人所簽發之支票，隨時提取不計利息之存款。
 
-* 7 本法稱信託款項，謂信託公司或銀行信託部，依信託契約運用或經理之款項。
+* 7 本法稱活期存款，謂存款人憑存摺隨時提取之存款。
 
-* 8 本法稱存款總額，謂銀行收受之活期存款，定期存款，儲蓄存款，及銀行可以運用之其他一切存款之和。
+* 8 本法稱定期存款，謂有一定時期之限制，存款人憑存單於到期時提取之存款。
 
-* 9 本法稱付現準備金，謂銀行對於所收受之存款，提成儲存現款於本行庫內，或活存當地國家銀行及其他銀行之準備金。
+* 9 本法稱儲蓄存款，謂個人或營利法人，以積蓄資金為目的，憑存摺或存單提取之小額存款。
 
-* 10 本法稱保證準備金，謂銀行對於所收受之存款，提成儲存於主管官署所指定之國家銀行，非依存款之減少不得提用之準備金。
+* 10 本法稱信託資金，謂銀行以受託人地位，收受信託款項，依照信託契約約定之條件，為信託人指定之受益人之利益而經營之資金。
 
-* 11 本法稱銀行負責人，謂按銀行所屬公司之種類，依公司法規定應負責之人。
+* 11 本法稱金融債券，謂銀行依照本法有關規定，為供給中期或長期信用，報經中央主管機關核准發行之債券。
 
-* 12 本法稱中央主管官署為財政部、地方主管官署，在省為財政廳，在直轄市為財政局。
+* 12 本法稱擔保放款或保證，謂對銀行之放款或保證，提供左列之一為擔保者：一、不動產或動產抵押權。二、動產或權利質權。三、借款人營業交易所發生之應收票據。四、各級政府公庫主管機關、銀行或經政府核准設立之信用保證機關之保證。五、借款人為股份有限公司時，其依第三十條所為之承諾。
 
-* 13 本法所稱銀行，分左列五種：一、商業銀行。二、實業銀行。三、儲蓄銀行。四、信託公司。五、錢莊。
+* 13 本法稱無擔保之放款或保證，謂無前條各款擔保之放款或保證。
 
-* 14 銀行之種類，應在其名稱中表示之，本法公布施行前已登記之銀行名稱與其種類不相符合者，得不予更改，但應於一定時期內調整其業務。前項時期由中央主管官署定之。
+* 14 本法稱中、長期分期償還放款，謂銀行依據借款人償債能力，經借貸雙方協議，於放款契約內訂明分期還本付息辦法及借款人應遵守之其他有關條件之放款。
 
-* 15 銀行及其分行非在中央主管官署申請營業登記，經核准並領得營業執照後，不得開始營業。違反前項規定，應勒令停業，並得科銀行各負責人五百元以下罰鍰。
+* 15 本法稱商業票據，謂依國內外商品交易或勞務提供，而產生之匯票或本票。前項匯票以出售商品或提供勞務之相對人為付款人而經其承兌者，謂商業承兌匯票。前項相對人委託銀行為付款人而經其承兌者，謂銀行承兌匯票。銀行對遠期匯票或本票，以折扣方式預收利息而購入者，謂貼現。
 
-* 16 凡經營第二條第一款至第六款業務之一者，均視同銀行，應依本法辦理。
+* 16 本法稱信用狀，謂銀行受客戶之委任。通知並授權指定受益人，在其履行約定條件後，得依照一定款式，開發一定金額以內之匯票或其他憑證，由該行或其指定之代理銀行負責承兌或付款之文書。
 
-* 17 銀行不得經營其所核准登記業務以外之業務。違反前項規定，得科銀行各負責人一千元以下罰鍰，或勒令撤換其負責人，其情節重大者，並得撤銷其營業執照。
+* 17 本法稱存款準備金，謂銀行按其每日存款餘額，依照中央銀行核定之比率，存於中央銀行之存款及本行庫內之現金。
 
-* 18 凡以收存貨幣或款項為常業者，不論其收存方法為給予支票、或存單、或收據、或簿摺、或期票、或其他類似之證明文件，均視為銀行業務。但代理人收存委託人寄託款項、或買賣上繳存定金、或保證金、或業務機關收存之職工儲蓄，不在此限。
+* 18 本法稱銀行負責人，謂依公司法或其他法律或其組織章程所定應負責之人。
 
-* 19 各種銀行資本之最低額，由中央主管官署將全國劃分區域，審核當地人口數量、經濟金融實況及已設立各種銀行之營業情形，分別呈請行政院核定之。前項規定，對本法公布施行前已登記之銀行，得不予適用。
+* 19 本法稱主管機關：在中央為財政部；在省（市）為省（市）政府財政廳（局）。
 
-* 20 銀行資本應以國幣計算。
+* 20 本法所稱銀行，分左列四種：一、商業銀行。二、儲蓄銀行。三、專業銀行。四、信託投資公司。銀行之種類或其專業，應在其名稱中表示之。
 
-* 21 凡欲設立銀行者，應開具左列各款，呈請中央主管官署核准營業登記：一、銀行名稱及其公司組織之種類。二、資本總額。三、業務種類及範圍。四、營業計劃。五、本行及分行所在地。六、發起人姓名、籍貫、住址及履歷。
+* 21 銀行及其分支機構，非經完成第二章所定之設立程序，不得開始營業。
 
-* 22 銀行經核准營業登記後，欲設立分行時，應開具前條第三款、第四款及分行所在地，分別呈請營業登記。
+* 22 銀行不得經營未經中央主管機關核定之業務。
 
-* 23 中央主管官署得視國內各地區經濟金融情形，於呈准行政院後，限制某一地區內不得增設銀行或分行，或不得增設某種銀行或分行。
+* 23 各種銀行資本之最低額，由中央主管機關將全國劃分區域，審酌各區域人口、經濟發展情形，及銀行之種類，分別核定或調整之。銀行資本未達前項調整後之最低額者，中央主管機關應指定期限，命其辦理增資；逾期未完成增資者，應撤銷其許可。
 
-* 24 凡經核准設立之銀行，於資本全數認足，並至少收足總額二分之一時，除準用公司登記程序規定，呈請中央主管官署為營業登記外，並應繳驗資本證明書，及所在地銀錢業或信託業同業公會或商會對其發起人之信用證明書。
+* 24 銀行資本應以國幣計算。
 
-* 25 銀行於開始營業時，應將中央主管官署所給營業執照記載各款，於本行及分行所在地公告之。違反前項規定，得科銀行各負責人五百元以下罰鍰。
+* 25 銀行股票應為記名式。
 
-* 26 銀行之股票或股票單應為記名式。儲蓄銀行之股東，應以具有中華民國國籍者為限。
+* 26 中央主管機關得視國內經濟、金融情形，於一定區域內限制銀行或其分支機構之增設。
 
-* 27 銀行對於第二十一條所列第一款至第三款及第五款之事項，擬予變更、或擬與他銀行合併時，應先呈請中央主管官署核准，方得為之，並應聲請變更營業登記。前項變更營業登記，應於核准後十五日內，在本行及分支行所在地公告之。違反第一項規定，得制止其變更，並得科銀行各負責人一千元以下罰鍰，違反第二項規定公告期限，得科銀行各負責人五百元以下罰鍰。
+* 27 銀行在國外設立分支機構，應由中央主管機關洽商中央銀行後核准辦理。
 
-* 28 商業銀行、實業銀行得附設儲蓄部及信託部。但各該部之資本、營業及會計必須獨立，並依本法第十九條及第五章或第六章之規定，分別辦理。
+* 28 商業銀行及專業銀行得附設儲蓄部及信託部。但各該部資本、營業及會計必須獨立，並依第二十三條、第二章及第四章或第六章之規定辦理。
 
-* 29 銀行存入其他每一銀行之款，不得超過其所收存款總額百分之十。但存入國家銀行者，不在此限。
+* 29 除法律另有規定者外，非銀行不得經營收受存款、受託經理公眾財產或辦理國內外匯兌業務。但以受託人身分收存委託人寄託款項，或基於交易行為收存定金或保證金，或工商企業經中央主管機關核准，收受本機構內之職工儲蓄者，不在此限。工商企業依前項但書規定收受職工儲蓄者，其負責人應負連帶清償責任。中央主管機關並得訂定辦法管理之。違反第一項規定者，除主管機關應查明取締，並移送法辦外，如屬法人組織，其負責人對有關債務，並應負連帶清償責任。
 
-* 30 銀行各種存款及放款之最高利率，由所在地銀錢業、信託業同業公會會同當地中央銀行議定。當地無銀錢業或信託業同業公會或中央銀行者，參照附近地方所定標準辦理。
+* 30 銀行辦理放款、開發信用狀或提供保證，其借款人、委任人或被保證人為股份有限公司之企業，如經董事會決議，向銀行出具書面承諾，以一定財產提供擔保，及不再以該項財產提供其他債權人設定質權或抵押權者，得免辦或緩辦不動產或動產抵押權登記或質物之移轉占有。但銀行認為有必要時，債務人仍應於銀行指定之期限內補辦之。借款人、委任人或被保證人違反前項承諾者，其參與決定此項違反承諾行為之董事及行為人應負連帶賠償責任。
 
-* 31 凡向銀行請求停止給付存戶之存款、匯款或扣留擔保品保管物、或為其他類似之行為者，應經法院之裁判。凡向銀行為前項之請求者，得向銀行提供擔保，請其暫行停止給付，如法院裁判不准停止給付時，請求人及銀行對於因停止給付而遭受損害之人，應負賠償之責。
+* 31 銀行開發信用狀或擔任商業匯票之承兌，其與客戶間之權利、義務機關，以契約定之。銀行辦理前項業務，如需由客戶提供擔保者，其擔保依第十二條所列各款之規定。
 
-* 32 銀行不得對本行負責人或職員為任何方式之信用放款。
+* 32 銀行不得對本行負責人或職員為無擔保放款或保證。
 
-* 33 銀行對其負責人所為抵押或質之放款。或對於其負責人有利害關係之公司、合夥或個人所為之放款，其利率與條件不得優於其他貸款人。
+* 33 銀行對本行負責人或職員所為之擔保放款或對與本行負責人或職員有利害關係之企業或個人所為之放款，其條件不得優於其他借款人。
 
-* 34 違反第三十二條或第三十三條之規定，得科銀行各負責人一千元以下罰鍰。
+* 34 銀行不得於規定利息外，以津貼、贈與或其他給與方法吸收存款。但對於信託資金依約定發給紅利者，不在此限。
 
-* 35 銀行不得於規定利息外，以津貼、贈與或其他給予方法吸引存款。但信託款項訂有契約分給紅利者，不在此限。違反前項規定，得科銀行各負責人一千元以下罰鍰。
+* 35 銀行負責人及職員不得以任何名義，向存戶、借款人或其他顧客收受佣金、酬金或其他不當利益。
 
-* 36 銀行負責人及其他職員，不得以自己名義，向存戶貸款人或委託人收受佣金酬金或其他不當得利。違反前項規定者，得科一年以下有期徒刑、拘役或三千元以下罰金。
+* 36 中央主管機關於必要時，經洽商中央銀行後，得對銀行無擔保之放款或保證，予以適當之限制。
 
-* 37 銀行放款以不動產或動產為抵押或質者。每項放款之數，不得超過其抵押物或質押物時價百分之七十。對於為抵押之不動產已設定其他債權者。應合併計算。仍不得超過其時價百分之七十。
+* 37 借款人所提質物或抵押物之放款值，由銀行根據其時值、折舊率及銷售性，覈實決定。中央銀行因調節信用，於必要時得選擇若干種類之質物或抵押物，規定其最高放款率。
 
-* 38 銀行每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表、盈餘分配之決議或議案，於股東同意或股東承認後十五日內，呈報中央主管官署查核。違反前項所定呈報期限，得科銀行各負責人五百元以下罰鍰，其呈報表冊有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 38 銀行對購買或建造住宅或企業用建築，得辦理中、長期放款。但最長期限不得超過二十年。
 
-* 39 銀行分派每一營業年度之盈餘時，應先提十分之二為公積金。但公積金已達其資本總額時，不在此限。除前項公積金外，銀行得以章程規定或股東議決，另提特別公積金。
+* 39 銀行對個人購置耐久消費品得辦理中期放款；或對買受人所簽發經承銷商背書之本票，辦理貼現。
 
-* 40 銀行因不能支付其到期之債務，經中央銀行停止其票據交換時，中央主管官署得令其停業，限期清算。
+* 40 前二條放款，均得適用中、長期分期償還放款方式；必要時，中央銀行得就其付現條件及信用期限，予以規定並管理之。
 
-* 41 銀行解散清算時，應將其營業執照撤銷。
+* 41 銀行利率應以年率為準。各種存款之最高利率，由中央銀行定之。各種放款利率，由銀行公會議訂其幅度，報請中央銀行核定施行。
 
-* 42 中央主管官署對於銀行應繳存之保證準備金比率，就第四十八條第一項、第五十七條第一項、第六十六條第一項最低及最高限度內，按照當地當時金融市場情形，商同中央銀行分別核定之。
+* 42 銀行各種存款準備金比率，由中央銀行在左列範圍內定之：一、支票存款：百分之十五至四十。二、活期存款：百分之十至三十五。三、儲蓄存款：百分之五至二十。四、定期存款：百分之七至二十五。前項存款準備金，應按銀行每日存款餘額調整；其調整及查核辦法，由中央銀行定之。中央銀行為調節信用，於必要時對自一定期日起之支票存款及活期存款增加額，得另定額外準備金比率，不受第一項所列最高比率之限制。
 
-* 43 中央主管官署得隨時派員，或令地方主管官署派員，檢查銀行業務及帳目，或令銀行於限期內造具資產負債表、財產目錄或其他報告呈核。前項帳目表冊或報告，有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 43 為促使銀行對其資產保持適當之流動性，中央銀行經洽商中央主管機關後，得隨時就銀行流動資產與各項負債之比率，規定其最低標準。未達最低標準者，中央主管機關應通知限期調整之。
 
-* 44 銀行為保障存款人利益，應聯合成立存款保險之組織。
+* 44 中央主管機關為健全銀行財務基礎，經洽商中央銀行後，得就銀行主要負債與淨值之比率，規定其最高標準。凡實際比率高於規定標準之銀行，中央主管機關得限制其分配盈餘。前項所稱主要負債，由主管機關斟酌各類銀行之業務性質，分別以命令規定之。
 
-* 45 中央主管官署得以命令規定銀行營業時間及休假日。
+* 45 中央主管機關得隨時派員，或委託中央銀行，或令地方主管機關派員，檢查銀行業務及帳目，或令銀行於限期內造具資產負債表、財產目錄或其他報告函核。
 
-* 46 銀行違反法令，應撤銷其營業執照，或其負責人應受罰金以上之處分時，主管官署應移送法院裁判。
+* 46 為保障存款人之利益，得由政府或銀行設立存款保險之組織。
 
-* 47 凡收受普通存款與辦理一般放款、匯兌及票據承兌或貼現者，為商業銀行。在本法公布施行前已經核准營業登記之銀行，經營前項業務之一部或全部而不稱商業銀行者，視同商業銀行。
+* 47 銀行為相互調劑準備，並提高貨幣信用之效能，得訂定章程，成立同業間之借貸組織。
 
-* 48 商業銀行所收普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之十至十五。二、定期存款百分之五至十。前項保證準備金，經中央主管官署依第十九條規定分區審核，得以公債庫券或國家銀行認可之公司債抵充。
+* 48 銀行非依法院之裁判或其他法律之規定，不得接受第三人有關停止給付存款或匯款、扣留擔保物或保管物或其他類似之請求。
 
-* 49 商業銀行所收普通存款，應提存之付現準備金。其最低比率如左：一、活期存款百分之十五。二、定期存款百分之七。
+* 49 銀行每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表、盈餘分配之決議，於股東會承認後十五日內，分別報請中央主管機關及中央銀行備查，並將資產負債表於其所在地之日報公告之。
 
-* 50 商業銀行得經營左列業務：一、收受普通活期、定期存款。二、辦理各種放款或貼現。三、票據承兌。四、辦理國內匯兌。五、經中央銀行特許辦理國外匯兌。六、代理收付款項。七、買賣公債庫券及公司債。八、辦理與其業務有關之倉庫或保管業務。九、投資於生產公用或交通事業。十、代募公債、公司債及公司股份。十一、經中央銀行特許收受外國貨幣或買賣生金銀。
+* 50 銀行分派每一營業年度之盈餘時，應先提百分之二十為法定盈餘公積。但法定盈餘公積已達其資本總額時，不在此限。除前項法定盈餘公積外，銀行得於章程規定或經股東會決議，另提特別盈餘公積。
 
-* 51 商業銀行之信用放款，不得超過其所收存款總額百分之二十五。
+* 51 銀行之營業時間及休假日，得由中央主管機關規定，並公告之。
 
-* 52 商業銀行得經營以動產或不動產為抵押之放款。但不動產之抵押放款總額，不得超過其所收存款總額百分之十五。
+* 52 銀行之設立，除法律另有規定或本法修正施行前經專案核准者外，以組織股份有限公司者為限。
 
-* 53 商業銀行購入生產公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之二，總額不得超過其存款總額百分之二十。
+* 53 設立銀行者，應載明左列各款，報請中央主管機關許可：一、銀行之種類、名稱及其公司組織之種類。二、資本總額。三、營業計畫。四、本行及分支機構所在地。五、發起人姓名、籍貫、住居所、履歷及認股金額。
 
-* 54 商業銀行信用放款期限，不得超過一年，抵押或質之放款期限；不得超過三年。前項抵押或質之放款有確定預期收益可供分期償還者，得酌予延長，但最長不得超過五年。
+* 54 銀行經許可設立者，應依公司法規定設立公司；於收足資本全額並辦妥公司登記後，再檢同左列各件，申請中央主管機關核發營業執照：一、公司登記證件。二、中央銀行驗資證明書。三、銀行章程。四、股東名冊及股東會會議紀錄。五、董事名冊及董事會會議紀錄。六、常務董事名冊及常務董事會會議紀錄。七、監察人名冊及監察人會議紀錄。銀行非公司組織者，得於許可設立後，準用前項規定，逕行申請核發營業執照。
 
-* 55 商業銀行違反前四條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 55 銀行開始營業時，應將中央主管機關所發營業執照記載之事項，於本行及分支機構所在地公告之。
 
-* 56 凡對農、工、礦或其他生產、公用、交通事業經營銀行業務者，為實業銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱實業銀行者，視同實業銀行。
+* 56 中央主管機關核發營業執照後，如發現原申請事項有虛偽情事，其情節重大者，應即撤銷其許可。
 
-* 57 實業銀行所收普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之八至十二。二、定期存款百分之五至八。前項保證準備金，經中央主管官署依第十九條規定分區審核，得以公債、庫券及國家銀行所認可之農、工、礦業或其他生產、公用、交通事業之股票或公司債抵充。
+* 57 銀行增設分支機構時，應開具分支機構營業計畫及所在地，申請中央主管機關許可，並核發營業執照。
 
-* 58 實業銀行所收普通存款，應提存付現準備金。其最低比率如左：一、活期存款百分之十二。二、定期存款百分之六。
+* 58 銀行之合併或對於依第五十三條第一款、第二款或第四款所申報之事項擬予變更者，應經中央主管機關許可，並辦理公司變更登記及申請換發營業執照。前項合併或變更，應於換發營業執照後十五日內，在本行及分支機構所在地公告之。
 
-* 59 實業銀行得經營左列業務：一、收受普通活期、定期存款。二、對農、工、礦及其他生產、公用或交通事業，辦理各種放款、票據承兌或貼現及匯兌。三、代農、工、礦業及其他生產、公用或交通事業辦理收付款項。四、代農、工、礦及其他生產、公用、或交通事業募集股份或公司債。五、買賣公債、庫券、公司債及他債券。六、辦理與其業務有關之倉庫或保管業務。七、投資於農、工、礦業及其他生產，公用或交通事業。八、辦理國家銀行指定代理之業務。
+* 59 銀行違反前條第一項之規定者，中央主管機關應勒令停業，限期補正。
 
-* 60 實業銀行所收存款總額，應有百分之六十五以上運用於實業，其以某種專業冠其名稱者，至少應以其存款總額百分之四十運用於該專業，百分之二十五以上運用於其他實業。
+* 60 申請銀行營業執照時，應繳納執照費；其金額由中央主管機關定之。
 
-* 61 實業銀行得經營以動產或不動產為抵押之放款。但不動產之抵押放款總額，不得超過其所收存款總額百分之三十。
+* 61 銀行經股東會決議解散者，應申敘理由，附具股東會紀錄及清償債務計畫，申請主管機關核准後進行清算。主管機關依前項規定核准解散時，應即撤銷其許可。
 
-* 62 實業銀行之信用放款，不得超過其所收存款總額百分之二十五，其期限不得超過一年；抵押或質之放款期限，不得超過五年。前項抵押或質之放款之確定預期收益可供分期償還者，得酌予延長。但最長不得超過七年。
+* 62 銀行因不能支付其債務，經中央銀行停止其票據交換者，中央主管機關應勒令停業，限期清理。前項勒令停業之銀行，如於清理期限內，已回復支付能力者，得申請中央主管機關核准復業；逾期未經核准復業者，應撤銷其許可；並自停業時起視為解散，原有清理程序視為清算。
 
-* 63 實業銀行購入農、工、礦業及其他生產、公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之四，總額不得超過其存款總額百分之四十。
+* 63 銀行清算及清理，除本法另有規定外，準用股份有限公司有關普通清算之規定。但有公司法第三百三十五條所定之原因，或因前條第二項之情事而為清算時，應依特別清算程序辦理。前項清理之監督，由主管機關為之；主管機關為監督清理之進行，得派員監理。
 
-* 64 實業銀行違反前四條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 64 銀行虧損逾資本三分之一者，其董事或監察人應即申報中央主管機關。中央主管機關對具有前項情形之銀行，得限期命其補足資本；逾期未經補足資本者，應勒令停業。
 
-* 65 凡以複利方法收受以儲蓄為目的之定額存款者，為儲蓄銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱儲蓄銀行者，視同儲蓄銀行。
+* 65 銀行經勒令停業，並限期命其就有關事項補正；逾期不為補正者，應由中央主管機關撤銷其許可。
 
-* 66 儲蓄銀行所收儲蓄及普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之十至十五。二、定期存款百分之五至十。前項保證準備金，得以公債、庫券或國家銀行所認可之有價證券抵充。
+* 66 銀行經中央主管機關撤銷許可者，應即解散，進行清算。
 
-* 67 儲蓄銀行所收儲蓄及普通存款，應提存付現準備金，其最低比率如左：一、活期存款百分之十。二、定期存款百分之五。
+* 67 銀行經核准解散或撤銷許可者，應限期繳銷執照；逾期不繳銷者，由中央主管機關公告註銷之。
 
-* 68 儲蓄銀行得經營左列業務：一、收受活期儲蓄存款及通知儲蓄存款。二、收受整存整付、零存整付、整存零付及分期付息之定期儲蓄存款。三、收受普通活期、定期存款。四、辦理各種放款。五、辦理國內匯兌。六、代理收付款項。七、買賣公債、庫券及公司債。八、辦理以有價證券為擔保之放款。九、辦理與其業務有關之倉庫或保管業務。十、辦理生產、公用、交通事業及有確實收益之動產或不動產抵押放款。十一、購入他銀行承兌之票據。十二、以本銀行定期存款為擔保之放款。十三、代募公債、庫券及公司債。
+* 68 法院為監督銀行之特別清算，應徵詢主管機關之意見；必要時得請主管機關推薦清算人，或派員協助清算人執行職務。
 
-* 69 前條儲蓄存款以外之存款，視為普通存款，依第四十八條及第四十九條規定所存之準備金辦理。但此項普通存款總額，不得超過其儲蓄存款之總額二分之一。
+* 69 銀行進行清算後，非經清償全部債務，不得以任何名義，退還股本或分配股利。銀行清算時，關於信託資金及信託財產之處理，依信託契約之約定。
 
-* 70 銀行之設有儲蓄部者，該部對於本行其他部份款項之往來，視同他銀行。銀行受破產之宣告時，儲蓄部儲蓄存款，得就儲蓄部之資產優先受償。
+* 70 本法稱商業銀行，謂以收受支票存款，供給短期信用為主要任務之銀行。
 
-* 71 儲蓄存款每戶之最高限額如左：一、活期不得超過該儲蓄銀行或儲蓄部額定股本總額百分之三。二、定期不得超過該儲蓄銀行或儲蓄部額定股本總額百分之六。超過前項定額之存款，視為普通存款，銀行應在其所發給之存款證上註明為普通存款。
+* 71 商業銀行經營左列業務：一、收受支票存款。二、收受活期存款。三、收受定期存款。四、辦理短期及中期放款。五、辦理票據貼現。六、投資公債、國庫券、公司債券及金融債券。七、辦理國內外匯兌。八、辦理商業匯票之承兌。九、簽發國內外信用狀。十、辦理國內外保證業務。十一、代理收付款項。十二、代銷公債、國庫券、公司債券及公司股票。十三、辦理與前列各款業務有關之倉庫、保管及代理服務業務。
 
-* 72 儲蓄銀行之信用放款，不得超過其所收存款總額百分之十。
+* 72 商業銀行辦理中期放款之總餘額，不得超過其所收定期存款總餘額。
 
-* 73 儲蓄銀行所有不動產抵押放款，不得超過其所收存款總額百分之三十。
+* 73 商業銀行得就證券之發行與買賣，對有關證券商或證券金融公司予以資金融通。前項資金之融通，其管理辦法由中央銀行定之。
 
-* 74 儲蓄銀行購入農、工、礦業及其他生產、公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之二，總額不得超過其存款總額百分之二十五。
+* 74 商業銀行不得投資於其他企業及非自用之不動產。但為配合政府經濟發展計畫，經中央主管機關核准者，不在此限。
 
-* 75 儲蓄銀行信用放款期限，不得超過一年，抵押或質之放款期限，不得超過五年。前項抵押或質之放款，有確定預期收益可供分期償債者，得酌予延長，但最長不得超過七年。
+* 75 商業銀行對自用不動產之投資，除營業用倉庫外，不得超過其於投資該項不動產時之淨值；投資營業用倉庫，不得超過其投資於該項倉庫時存款總餘額百分之五。
 
-* 76 儲蓄銀行之負責人，不得為本銀行向外借款之保證人。
+* 76 商業銀行因行使抵押權或質權而取得之不動產或股票，除符合第七十四條或第七十五條規定者外，應自取得之日起一年內處分之。
 
-* 77 儲蓄銀行違反前五條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 77 本法稱儲蓄銀行，謂以收受存款及發行金融債券方式吸收國民儲蓄，供給中期及長期信用為主要任務之銀行。
 
-* 78 儲蓄銀行之資產不足清償其儲蓄存款時，其銀行負責人應負連帶無限清償責任。前項責任於各該負責人卸職登記之日起滿二年解除。
+* 78 儲蓄銀行經營左列業務：一、收受儲蓄存款。二、收受定期存款。三、收受活期存款。四、發行金融債券。五、辦理企業生產設備中期放款、長期放款，及中、長期分期償還放款。六、辦理企業建築、住宅建築中期放款，及中、長期分期償還放款。七、投資公債、國庫券、公司債券及公司股票。八、辦理票據貼現。九、辦理商業匯票承兌。十、辦理國內匯兌。十一、保證發行公司債券。十二、代理收付款項。十三、承銷公債、國庫券、公司債券及公司股票。十四、辦理經中央主管機關核准之國內外保證業務。十五、辦理與前列各款業務有關之倉庫及其他保管業務。
 
-* 79 銀行兼設儲蓄部者，其負責人及兼管儲蓄業務之經理人，均視為儲蓄部之負責人，應負前條規定之責任。
+* 79 儲蓄存款，在到期前不得中途提取。但得憑存單質借，其質借成數，由中央主管機關洽商中央銀行定之。
 
-* 80 儲蓄銀行之資產負債表及財產目錄，每半年應公告一次，並將公報呈報中央主管官署備案。前項公告有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 80 儲蓄銀行發行金融債券，得以折價或溢價方式發售，其開始還本期限，不得低於兩年。儲蓄銀行金融債券之最高發行額，以發行銀行淨值之二十倍為限；其發行辦法，由中央主管機關洽商中央銀行定之。
 
-* 81 有存款總額百分之五以上之儲戶，對於前條之公告及其業務有疑義時，得呈請主管官署派員會同儲戶所舉代表檢查之。
+* 81 商業銀行及專業銀行附設之儲蓄部，不得發行金融債券。
 
-* 82 本章規定，於銀行之儲蓄部份準用之。
+* 82 儲蓄銀行得辦理短期放款。但其短期放款及票據貼現之總餘額，不得超過所收活期存款及定期存款總餘額。
 
-* 83 凡以信託方式收受、運用或經理款項及財產者，為信託公司。在本法公布施行前，已經核准營業登記之信託公司，其兼營商業或儲蓄銀行業務者，其兼營部份應依第三章或第五章規定辦理。
+* 83 儲蓄銀行投資企業股票，除經主管機關核准者外，應以上市股票為限。其投資總額不得超過投資時所收存款總餘額及金融債券發售額之和之百分之十。投資於每一公司股票之金額，不得超過該公司資本總額百分之五。
 
-* 84 第四十八條及第四十九條之規定，於信託公司準用之。
+* 84 儲蓄銀行辦理住宅建築及企業建築放款之總額，不得超過放款時所收存款總餘額及金融債券發售額之和之百分之二十。
 
-* 85 信託公司得經營左列業務：一、管理財產。二、執行遺囑。三、管理遺產。四、為未成年人或禁治產人之財產監護人。五、受法院命令管理扣押之財產，及受任為破產管理人。六、收受信託款項及存款。七、辦理信託投資。八、代理發行或承募公債、庫券、公司債及股票。九、承受抵押及管理公債、庫券、公司債及股票。十、代理公司股票事務及經理公司債及其他債券擔保品之基金。十一、代理不動產孳息收付事項。十二、代理保險。十三、管理壽險債權及養老金、撫卹金等分期收付。
+* 85 銀行附設儲蓄部者，該部對本行其他部分款項之往來視同他銀行；銀行受破產之宣告時，該部之負債得就該部之資產優先受償。
 
-* 86 信託公司執行信託業務，涉及法律、會計、人事及其他不屬於財務之事項，應委託登記合格執行業務之律師、會計師或其他專門技師為之。
+* 86 第七十五條之規定，於儲蓄銀行準用之。
 
-* 87 第七十二條至七十四條之規定，於信託公司準用之，但其信託契約另有訂定者，從其訂定。信託公司違反前項各準用規定，得科公司各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 87 為便利專業信用之供給，中央主管機關得許可設立專業銀行，或指定現有銀行，擔任該項信用之供給。
 
-* 88 信託公司應以善良管理人之注意，運用信託款項。
+* 88 前條所稱專業信用，分為左列各類：一、工業信用。二、農業信用。三、輸出入信用。四、中小企業信用。五、不動產信用。六、地方性信用。
 
-* 89 信託公司有違反信託契約或重大過失，致信託人受損失時，應負全部賠償責任。信託公司負責人對前項賠償不足時、對其不足額負連帶無限賠償責任。前項連帶無限責任，於各該負責人卸職登記之日起滿二年解除。
+* 89 專業銀行得經營之業務項目，由中央主管機關根據其主要任務，並參酌經濟發展之需要，就第三條所定範圍規定之。
 
-* 90 信託公司除有契約特定者外，得為信託人投資於任何事業。信託公司或其負責人自身有利害關係之事業，或信託公司所出售之事業或財產上，不得代為投資，但信託人知情而訂明於信託契約者，不在此限。違反前項規定，公司各負責人應連帶負賠償責任，並得科公司各負責人一千元以下罰鍰。
+* 90 專業銀行以供給中期及長期信用為主要任務者，得準用第八十條之規定，發行金融債券。專業銀行依前項規定發行金融債券募得之資金，應全部用於其專業之投資及中、長期放款。
 
-* 91 信託公司收受信託款項，在未依契約運用前或在運用中收回之時，準用第八十八條之規定。
+* 91 供給工業信用之專業銀行為工業銀行。工業銀行以供給工、礦、交通及其他公用事業所需中、長期信用為主要任務。工業銀行經中央主管機關之核准，得經營第七十三條第一項之業務。
 
-* 92 本章規定，於銀行之信託部份準用之。
+* 92 供給農業信用之專業銀行為農業銀行。農業銀行以調劑農村金融，及供應農、林、漁、牧之生產及有關事業所需信用為主要任務。
 
-* 93 凡按照各地銀錢業習慣，經營商業銀行業務者，為錢莊。在本法公佈施行前已經核准營業登記之錢莊，其資本合於第十九條第一項規定時，得改稱為銀行。
+* 93 為加強農業信用調節功能，農業銀行得透過農會組織吸收農村資金，供應農業信用及辦理有關農民家計金融業務。
 
-* 94 錢莊關於準備金及抵押放款等事項，準用第四十八條至第五十條及第五十二條至第五十五條之規定。
+* 94 供給輸出入信用之專業銀行為輸出入銀行。輸出入銀行以供給中、長期信用，協助拓展外銷及輸入國內工業所必需之設備與原料為主要任務。
 
-* 95 錢莊之信用放款，不得超過其所收存款總額百分之五十。違反前項規定，得科錢莊各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 95 輸出入銀行為便利國內工業所需重要原料之供應，經中央主管機關核准，得提供業者向國外進行生產重要原料投資所需資金。
 
-* 96 錢莊兼營商業銀行以外之他種銀行業務，應先經中央主管官署之核准，依照關於各該銀行之規定辦理。
+* 96 供給中小企業信用之專業銀行為中小企業銀行。中小企業以供給中小企業中、長期信用，協助其改善生產設備及財務結構，暨健全經營管理為主要任務。中小企業之範圍，由中央經濟主管機關擬訂，報請行政院核定之。
 
-* 97 錢莊改組為銀行時，應按其業務及公司種類，依第二十七條之規定，為變更之登記。
+* 97 供給不動產信用之專業銀行為不動產信用銀行。不動產信用銀行以供給土地開發、都市改良、社區發展、道路建設、觀光設施及房屋建築等所需中、長期信用為主要任務。
 
-* 98 本章規定，於經營類似錢莊之銀號、票號及其他名稱之銀錢業準用之。
+* 98 供給地方性信用之專業銀行為國民銀行。國民銀行以供給地區發展及當地國民所需短、中期信用為主要任務。
 
-* 99 外國銀行在依公司法呈請認許前，應依本法規定，向中央主管官署呈請特許，非經特許，不得在中華民國境內設立分行。
+* 99 國民銀行應分區經營，在同一地區內以設立一家為原則。國民銀行對每一客戶之放款總額，不得超過一定之金額。國民銀行設立區域之劃分，與每戶放款總額之限制，由中央主管機關定之。
 
-* 100 中央主管官署得按照國際貿易及生產事業之需要，指定外國銀行得設分行之地區。
+* 100 本法稱信託投資公司，謂以受託人之地位，按照特定目的，收受、經理及運用信託資金與經營信託財產，或以投資中間人之地位，從事與資本市場有關特定目的投資之金融機構。信託投資公司之經營管理，依本法之規定；本法未規定者，適用其他有關法律之規定；其管理規則，由中央主管機關定之。
 
-* 101 外國銀行呈請特許時，除依公司法第四百三十五條規定，報明各款事項外，應加具本行最近資產負債表、損益表及其分行設立地區該國領事官對其信用之證明書。
+* 101 信託投資公司經營左列業務：一、辦理對生產事業之中、長期放款。二、投資公債、國庫券、公司債券、金融債券及上市股票。三、對生產事業直接投資。四、投資住宅建築及企業建築。五、保證發行公司債券。六、辦理國內外保證業務。七、承銷及自營買賣或代客買賣有價證券。八、收受、經理及運用各種信託資金。九、擔任證券投資信託之受託人。十、受託經管各種財產。十一、擔任債券發行受託人。十二、擔任債券或股票發行簽證人。十三、代理證券發行、登記、過戶及股息紅利之發放事項。十四、受託執行遺囑及管理遺產。十五、擔任公司重整監督人。十六、經營證券投資信託事業。十七、提供證券發行、募集之顧問服務，及辦理與前列各款業務有關之代理服務事項。
 
-* 102 外國銀行在中華民國境內設立分行，經中央主管官署特許後，得在其分行所在地經營第五十條或第五十九條規定各種業務。
+* 102 信託投資公司自有資金之營運，除存放銀行外，以經營前條第一款至第七款之業務為限。
 
-* 103 外國銀行在中華民國境內之分行，不得經營或兼營儲蓄銀行或信託公司業務。
+* 103 信託投資公司應以等於其所經營之各種信託資金之契約總值百分之二十之公債、銀行保證之公司債券或金融債券，繳存中央銀行，作為因違反法令規章或信託契約條款致受益人遭致損失之賠償準備。前項賠償準備，在公司開業時期，暫以該信託投資公司資本總額百分之二十為準，俟公司經營一年以後，再照前項標準調整之。信託投資公司經營第一百零一條第七款業務時，至少應指撥相當於其淨值百分之十金額，專門經營承銷及自營買賣證券業務；該項專款在未動用時，得以現金貯存，存放於其他金融機構或購買政府債券。
 
-* 104 外國銀行在中華民國境內之分行收付款項，以中華民國國幣為限，非經中央銀行特許，不得收受任何外國貨幣之存款或辦理外匯。
+* 104 信託投資公司收受、經理或運用各種信託資金及經營信託財產，應與信託人訂立信託契約，載明左列事項：一、資金營運之方式及範圍。二、財產管理之方法。三、收益之分配。四、信託投資公司之責任。五、會計報告之送達。六、各項費用收付之標準及其計算之方法。七、其他有關協議事項。
 
-* 105 外國銀行在中華民國境內之分行所收定期存款總額，應依第五十條及第五十九條規定，在中華民國境內運用。
+* 105 信託投資公司受託經理信託資金或信託財產，應盡善良管理人之注意。
 
-* 106 違反前三條任何規定。得科外國銀行在中華民國境內之分行各負責人一千元以下罰鍰。其情節重大者。並得勒令撤換其負責人。
+* 106 信託投資公司之經營與管理，應由具有專門學識與經驗之財務人員為之；並應由合格之法律、會計及各種業務上所需之技術人員協助辦理。
 
-* 107 第二十五條、第二十七條、第三十條至第三十八條、第四十條至第四十六條之規定，於外國銀行在中華民國境內之分行準用之。
+* 107 信託投資公司違反法令或信託契約，或因其他可歸責於公司之事由，致信託人受有損害者，其應負責之董事及主管人員應與公司連帶負損害賠償之責。前項連帶責任，自各該應負責之董事或主管人員卸職登記之日起二年間，未經訴訟上之請求而消滅。
 
-* 108 外國銀行購置與其業務有關之不動產，準用公司法第三百七十六條之規定。
+* 108 信託投資公司不得為左列行為。但因裁判之結果，或經信託人書面同意，並依市價購讓，或雖未經信託人同意，而係由集中市場公開競價購讓者，不在此限：一、承受信託財產之所有權。二、於信託財產上設定或取得任何權益。三、以自己之財產或權益讓售與信託人。四、從事於其他與前三項有關的交易。五、就信託財產或運用信託資金與公司之董事、職員或與公司經營之信託資金有利益關係之第三人為任何交易。信託投資公司依前項但書所為之交易，除應依規定報請主管機關核備外，應受左列規定之限制：一、公司決定從事交易時，與該項交易所涉及之信託帳戶、信託財產或證券有直接或間接利益關係之董事或職員，不得參與該項交易行為之決定。二、信託投資公司為其本身或受投資人之委託辦理證券承銷、證券買賣交易或直接投資業務時，其董事或職員如同時為有關證券發行公司之董事、職員或與該項證券有直接間接利害關係者，不得參與該交易行為之決定。
 
-* 109 第四十八條及第四十九條、或第五十七條及第五十八條之規定。於外國銀行在中華民國境內之分行準用之。
+* 109 信託投資公司在未依信託契約營運前，或依約營運收回後尚未繼續營運前，其信託資金之臨時營運，應以存放銀行或第一百零一條第二款之用途為限。
 
-* 110 銀行之營業登記、外國銀行之申請特許及銀行之其他登記，其程序準用公司法公司設立登記、外國公司認許、外國分公司登記及其他登記之規定。
+* 110 信託投資公司得經營左列信託資金：一、由信託人指定用途之信託資金。二、由公司確定用途之信託資金。信託投資公司對由公司確定用途之信託資金，得以信託契約約定，由公司負責，賠償其本金損失。信託投資公司對應賠償之本金損失，應於每會計年度終了時確實評審，依信託契約之約定，由公司以特別準備金撥付之。前項特別準備金，由公司每年在信託財產收益項下依主管機關核定之標準提撥。信託投資公司經依規定十足撥補本金損失後，如有剩餘，作為公司之收益；如有不敷，應由公司以自有資金補足。
 
-* 111 銀行之營業登記、外國銀行之申請特許、及其分行之營業登記、及銀行之其他登記規費，準照公司法各種登記費率計算，隨文繳納。
+* 111 信託投資公司應就每一信託戶及每種信託資金設立專帳；並應將公司自有財產與受託財產，分別記帳，不得流用。信託投資公司不得為信託資金借入項款。
 
-* 112 銀行營業登記、及外國銀行特許、及分行營業登記後，由中央主管官署發給營業執照，變更登記時，並換發執照，其營業執照費，準照公司法之規定。
+* 112 信託投資公司之債權人對信託財產不得請求扣押或對之行使其他權利。
 
-* 113 銀行對外文件，應標明其營業執照之號數。銀行分行對外文件，除標明其本行營業執照號數外，並應標明該分行營業執照號數。
+* 113 信託投資公司應設立信託財產評審委員會，將各信託戶之信託財產每三個月評審一次；並將每一信託帳戶審查結果，報告董事會。
 
-* 114 銀行營業登記領得執照後，應於十五日內依公司法申請公司設立登記，其變更登記時亦同。違反前項登記期限，得科銀行各負責人五百元以下罰鍰。
+* 114 信託投資公司應依照信託契約之約定及中央主管機關之規定，分別向每一信託人及中央主管機關作定期會計報告。
 
-* 115 銀行營業登記領得執照後，公司設立登記完成前，銀行股東視同合夥之合夥人。
+* 115 信託投資公司為設立證券投資信託基金而發行受益憑證，或以公開發售信託憑證方式，募集具有共同信託性質而由公司代為確定用途之信託基金者，應先擬具發行計畫，報經中央主管機關核准。前項證券投資信託基金及由公司代為確定用途之共同信託基金；其管理辦法，由中央主管機關定之。
 
-* 116 本法規定不適用於國家銀行。但其他銀行除法律另有規定外，適用本法之規定。
+* 116 本法稱外國銀行，謂依照外國法律組織登記之銀行，經中華民國政府認許，在中華民國境內依公司法及本法登記營業之分行。
 
-* 117 在本法公布前已經核准營業登記之銀行，其章程規定有與本法牴觸者，除本法另有規定外，應於本法施行後一年內修正，呈請中央主管官署核准備案。
+* 117 外國銀行在中華民國境內設立，應經中央主管機關之許可，依公司法申請認許及辦理登記，並應依第五十四條申請核發營業執照後始得營業。
 
-* 118 凡經營銀公司、銀號、票號及其他類似之銀錢業者，應於本法施行後一年內，按其業務性質，依本法修正組織，申請中央主管官署為營業登記。
+* 118 中央主管機關得按照國際貿易及工業發展之需要，指定外國銀行得設立之地區。
 
-* 119 本法自公布日施行。
+* 119 外國銀行之申請許可，除依公司法第四百三十五條報明並具備各款事項及文件外，並應報明設立地區，檢附本行最近資產負債表、損益表及該國主管機關或我國駐外使領館對其信用之證明書。其得代表或代理申請之人及應附送之說明文件，準用公司法第四百三十四條之規定。
+
+* 120 外國銀行應專撥其在中華民國境內營業所用之資金，並準用第二十三條及第二十四條之規定。
+
+* 121 外國銀行得經營之業務，由中央主管機關於第七十一條所定範圍內以命令定之。其涉及外匯業務者，並應經中央銀行之特許。
+
+* 122 外國銀行收付款項，除經中央銀行許可收受外國貨幣存款者外，以中華民國國幣為限。
+
+* 123 本章未規定者，準用商業銀行之規定。
+
+* 124 外國銀行購置其業務所需用之不動產，依公司法第三百七十六條之規定。
+
+* 125 違反第二十九條第一項之規定者，處五年以下有期徒刑、拘役或科或併科七千元以下罰金。
+
+* 126 股份有限公司違反其依第三十條所為之承諾者，其參與決定此項違反承諾行為之董事及行為人，處三年以下有期徒刑、拘役或科或併科五千元以下罰金，
+
+* 127 違反第三十五條之規定者，處三年以下有期徒刑、拘役或科或併科五千元以下罰金。但其他法律有較重之處罰者，依各該法律之規定。
+
+* 128 銀行董事或監察人違反第六十四條第一項之規定怠於申報，或信託投資公司之董事或職員違反第一百零八條之規定參與決定者，各處五千元以上一萬元以下罰鍰。
+
+* 129 有左列情事之一者，處五千元以上一萬元以下罰鍰：一、違反第二十一條或第二十二條之規定而為營業者。二、違反第二十五條之規定發行股票者。三、違反第二十八條之規定對資本、營業及會計不為劃分者。四、違反第三十二條或第三十三條之規定而為放款或保證者。五、違反中央主管機關依第四十三條之規定所為之通知未於限期內調整者。六、違反中央主管機關依第四十四條第一項規定所為之限制者。七、未依第一百零八條第二項之規定報核者。八、違反第一百十條第四項之規定未提特別準備金者。九、違反第一百十五條第一項之規定發售信託憑證或受益憑證者。
+
+* 130 有左列情事之一者，處三千元以上五千元以下罰鍰：一、違反中央銀行依第四十條所為之規定而放款者。二、違反第七十二條、第八十二條或中央主管機關依第九十九條第三項所為之規定而放款者。三、違反第七十五條或第八十三條之規定而為投資者。四、違反第一百零二條或第一百零九條之規定運用資金者。五、違反第一百十一條之規定者。
+
+* 131 有左列情事之一者，處一千元以上三千元以下罰鍰：一、違反第三十四條之規定吸收存款者。二、違反第四十五條、或第五十條、或第一百十四條之規定不申報營業書表或不為公告或報告者。
+
+* 132 違反本法或中央主管機關或中央銀行依本法所為之規定，除本法另有規定者外，經限期糾正而仍不遵行者，處一千元以上三千元以下罰鍰。
+
+* 133 第一百二十九條至第一百三十二條所定罰鍰之受罰人在銀行分行為分行負責人，在銀行本行為各部負責人；其能證明係依上級指示辦理者，以總經理或董事長為受罰人。
+
+* 134 本法所定罰鍰，由主管機關依職權裁決之。受罰人不服者，得依訴願及行政訴訟程序，請求救濟。在訴願及行政訴訟期間，得命提供適額保證，停止執行。
+
+* 135 罰鍰經限期繳納而逾期不繳者，自逾期之日起，每日加收滯納金百分之一；逾三十日仍不繳納者，移送法院強制執行，並得由中央主管機關勒令該銀行或分行停業。
+
+* 136 銀行經依本章之規定處罰後，於規定限期內仍不予改正者，得對其同一事實或行為再予加倍處罰。其屢違而情節重大者，並得撤銷其許可。
+
+* 137 本法施行前，未經申請許可領取營業執照之銀行，或其他經營存放款業務之類似銀行機構，均應於中央主管機關指定期限內，依本法規定，補行辦理設立程序。
+
+* 138 本法公布施行後，現有銀行或類似銀行機構之種類及其任務，與本法規定不相符合者，中央主管機關應依本法有關規定，指定期限命其調整。
+
+* 139 依其他法律設立之銀行，除各該法律另有規定者外，適用本法之規定。依其他法律設立之其他金融機構，其收受存款，經營授信、保證或信託投資等業務，除各該法律另有規定者外，適用本法有關銀行業務之規定。前項其他金融機構之管理辦法，由行政院定之。
+
+* 140 本法自公布日施行。
 
