--- a/司法-民事/票據法.md
+++ b/司法-民事/票據法.md
@@ -4,7 +4,9 @@
 
 * 3 稱本票者，謂發票人簽發一定之金額，於指定之到期日，由自己無條件支付與受款人或執票人之票據。
 
-* 4 稱支票者，謂發票人簽發一定之金額，委託銀錢業者或信用合作社，於見票時無條件支付與受款人或執票人之票據。
+* 4 稱支票者，謂發票人簽發一定之金額，委託銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，於見票時，無條件支付與受款人或執票人之票據。
+
+> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保障執票人之權益。
 
 * 5 在票據上簽名者，依票上所載文義負責。二人以上共同簽名時，應連帶負責。
 
@@ -330,7 +332,9 @@
 
 * 126 發票人應照支票文義擔保支票之支付。
 
-* 127 支票之付款人以銀錢業者及信用合作社為限。
+* 127 支票之付款人，以銀錢業者、信用合作社及經財政部核准辦理支票存款業務之農會為限。
+
+> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保證執票人之權益。
 
 * 128 支票限於見票即付，有相反之記載者，其記載無效。支票在票載發票日前，執票人不得為付款之提示。
 
@@ -364,15 +368,15 @@
 
 > 釋：第一項加「簽名」兩字，蓋不簽名則「保付」字樣是否係由付款人記載，即無從確定，自更無法加以責任。新增第四項係將原本法施行法第八條移列，並刪「不適用第十八條」之規定，因支票雖經保付，倘果已滅失，而又不許依公示催告程序為除權判決，則銀行帳目將無法清除，而正當權利人又無法領取款項，殊非立法當初之本旨，因予修正，以資補救。
 
-* 139 支票經在正面畫平行線二道者，付款人僅得對銀錢業者或信用合作社支付票據金額。支票上平行線內記載特定銀錢業者或信用合作社之名稱者，付款人僅得對該特定銀錢業者或信用合作社支付票據金額。但該特定銀錢業者或信用合作社為執票人時，得以其他銀錢業者或信用合作社為被背書人，背書後委託其取款。畫平行線支票之執票人，如非銀錢業者或信用合作社，應將該項支票存入其在銀錢業者或信用合作社之帳戶，委託其代為取款。支票上平行線內，記載特定銀錢業者或信用合作社之名稱，應存入其在該特定銀錢業者或信用合作社之帳戶，委託其代為取款。畫平行線之支票，得由發票人於平行線內記載照付現款或同義字樣，由發票人簽名或蓋章於其旁，支票上有此記載者，視為平行線之撤銷。但支票經背書轉讓者，不在此限。
+* 139 支票經在正面畫平行線二道者，付款人僅得對銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，支付票據金額。支票上平行線內記載特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之名稱者，付款人僅得對該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，支付票據金額。但該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會為執票人時，得以其他銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會為被背書人，背書後委託其取款。畫平行線支票之執票人，如非銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，應將該項支票存入其在銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之帳戶，委託其代為取款。支票上平行線內，記載特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之名稱，應存入其在該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之帳戶，委託其代為取款。畫平行線之支票，得由發票人於平行線內記載照付現款或同義字樣，由發票人簽名或蓋章於其旁，支票上有此記載者，視為平行線之撤銷。但支票經背書轉讓者，不在此限。
 
-> 釋：本條參酌實際作業情形作文字修正，俾易於瞭解，並加信用合作社，以與本法第四條配合。新增第五項，其理由，本項原係票據法施行法第十條之規定，予以修正增列。
+> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保障執票人之權益。
 
 * 140 違反第一百三十九條之規定而付款者，應負賠償損害之責。但賠償金額不得超過支票金額。
 
-* 141 發票人無存款餘額，又未經付款人允許墊借而簽發支票，經執票人提示不獲支付者，處二年以下有期徒刑、拘役或科或併科該支票面額以下之罰金。發票人簽發支票者，故意將金額超過其存數或超過付款人允許墊借之金額，經執票人提示不獲支付者，處二年以下有期徒刑、拘役或科或併科該不足金額以下之罰金。發票人於第一百三十條所定之期限內，故意提回其存款之全部或一部或以其他不正當方法，使支票不獲支付者，準用前二項之規定。犯第一項至第三項之罪，而於辯論終結前清償支票金額之一部或全部者，減輕或免除其刑。
+* 141 發票人無存款餘額又未經付款人允許墊借而簽發支票，經執票人提示不獲支付者，處三年以下有期徒刑、拘役或科或併科該支票面額以下之罰金。發票人簽發支票時，故意將金額超過其存數或超過付款人允許墊借之金額，經執票人提示不獲支付者，處三年以下有期徒刑、拘役或科或併科該不足金額以下之罰金。發票人於第一百三十條所定之期限內，故意提回其存款之全部或一部或以其他不正當方法使支票不獲支付者，準用前二項之規定。前三項情形，移送法院辦法，由中央主管機關定之。（中華民國七十五年十二月三十一日施行期限屆滿）。
 
-> 釋：本條原條文，係就發票行為加以處罰。支票發票人於發票時苟無存款餘額或存款餘額不足，或未經付款人允許墊借或雖經付款人允許墊借而發票金額超過付款人允許墊借之金額者，即應予以處罰。至於發票後執票人有無提示請求付款，及發票人於發票後有無補入存款待付，均非所問，自非情理之平，爰予修改，以期合理，並使善意之發票人得於發票後有補救之機會，而樂於設法籌款解決，以減少不必要之訟案。又於第三項中增加「或以其他不正當方法」字樣，蓋目前妨害支票流通之原因，除無存款或存款不足，及於付款期內故意提回其存款之情形外，尚有故意使用不符之印章，捏造事實，非法止付等行為。其可罰性與前述情形，並無二致，而原條文並無規定，無從予以處罰，致往往為不良之徒所乘，故予修正，以資適用。並另設第四項，使於裁罰確定前，清償支票金額全部或一部者，得減輕或免除其刑之規定，以鼓勵發票人努力清償，並間接保護債權人。
+> 釋：近年以來違反票據法案件不斷增加，乃決定從行政方面補救放寬在票據交換所之償兌期間，對善良發票人已有救濟，對惡性重大之徒應嚴加處罰，故將第四項予以刪除。
 
 * 142 依前條規定處罰之案件，不適用刑法第五十六條之規定。（中華民國七十五年十二月三十一日施行期限屆滿）。
 
